--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
 			<artifactId>flyway-core</artifactId>
 			
 		</dependency>
-
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-observation</artifactId>
+			<version>1.10.8</version>
+		</dependency>
 
 	</dependencies>
 
