--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+spring.flyway.url=jdbc:h2:mem:testdb
+spring.flyway.user=sa
+spring.flyway.password=
+spring.flyway.locations=classpath:db/migration
