--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 spring.flyway.url=jdbc:h2:mem:testdb
 spring.flyway.user=sa
-spring.flyway.password=
+spring.flyway.password=sa
 spring.flyway.locations=classpath:db/migration
